Version 1.3.0
-------------------------------------------------------------------------
*"python3" option added to rpy
*Documentation around session analysis added to the main vignette.
*log_strptime now sanitises strings >19 characters long, rather than >23
*mw_strptime now sanitises strings >14 characters long, rather than >30

Version 1.2.1
-------------------------------------------------------------------------
*session_length introduced, implemented in C++;
*Documentation around hive_query escaping improved;
*Bugfix in session_count around variable names;

Version 1.1.0
-------------------------------------------------------------------------
*Integrate with the MaxMind netspeed database
*Fix namespace_match bug
*Add Rcpp integration
*Add intertimes() and session_count(), basic functions for working with sessions.