@@ -7,6 +7,7 @@ export(geo_tz)
 export(global_query)
 export(hive_query)
 export(intertimes)
+export(keysplit)
 export(log_sieve)
 export(log_strptime)
 export(mw_strptime)
