@@ -4,6 +4,8 @@ Version 1.3.0
 *Documentation around session analysis added to the main vignette.
 *log_strptime now sanitises strings >19 characters long, rather than >23
 *mw_strptime now sanitises strings >14 characters long, rather than >30
+*Functions to aid in parallel processing added, including keysplit() to turn a dataframe into an mclapplyable object.
+*log_sieve, implementing the current prototype new pageviews definition, included.
 
 Version 1.2.1
 -------------------------------------------------------------------------
